--- a/sass/main.css
+++ b/sass/main.css
@@ -318,7 +318,7 @@ h2 {
   height: 16px;
   position: absolute;
   margin-top: 9px;
-  margin-left: -99px;
+  left: 10px;
   color: #353535;
 }
 
@@ -418,8 +418,8 @@ h2 {
   overflow: hidden;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
-.card__content2 .card__txt2 {
-  width: 74%;
+.card__content2 :hover .card__txt2 {
+  width: 75%;
   text-overflow: ellipsis;
   overflow: hidden;
   text-wrap: nowrap;
@@ -427,7 +427,7 @@ h2 {
 .card__content2 h3 {
   font-family: roboto;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 18px;
   color: black;
   margin-top: 10px;
   margin-left: 10px;
@@ -436,8 +436,8 @@ h2 {
 }
 .card__content2 .card__subtile2 {
   font-weight: 300;
-  font-size: 0.8rem;
-  line-height: 17.63px;
+  font-size: 15px;
+  line-height: 17px;
   color: black;
   margin-left: 10px;
   text-overflow: ellipsis;
