--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -66,7 +66,7 @@
         margin-left: -62px;
         font-size: xx-large;
     }
-    &:hover .fas h1 {
+    &:hover .fas  {
         opacity: 1;
     }
 }
